<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_background"
    android:orientation="vertical"
    android:textColor="@color/white">

    <RelativeLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/header_bg_short"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/scan_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:indeterminate="false"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"

        android:fadeScrollbars="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/files_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/files"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/file_list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:fadeScrollbars="false"
            android:listSelector="@drawable/custom_list_selector"

            />


    </LinearLayout>

    <TextView
        android:id="@+id/total_files_average_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/holo_purple"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/top_10_files_average_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@android:color/holo_purple"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@color/color_gray_background"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/most_frequent_files"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/frequency_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_gray_background"
            android:choiceMode="singleChoice"
            android:fadeScrollbars="false"
            android:listSelector="@drawable/custom_list_selector"
            android:padding="10dp" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/bottom_layout_margin"
        android:background="@color/white">

        <Button
            android:id="@+id/start_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:onClick="startScan"
            android:text="@string/start_scan" />

        <Button
            android:id="@+id/stop_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:onClick="stopScan"
            android:text="@string/stop_scan" />
    </RelativeLayout>


</LinearLayout>
